--- a/index.html
+++ b/index.html
@@ -25,22 +25,33 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item dropdown">
+         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            List
+            Clothes
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Top</a></li>
+            <li><a class="dropdown-item" href="#">T-shirts</a></li>
             <li><a class="dropdown-item" href="#">Jeans</a></li>
             <li><a class="dropdown-item" href="#">Dress</a></li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+        <form class="navbar-form-navbar-right" role="search">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search here ">
+                    <span class="input-group-btn">
+                        <button type="submit" class="btn btn-default">
+                            <span class="glyphicon glyphicon-search"></span>
+                        </button>
+                    </span>
+                </div>
+            </form>
+        </div>
       </ul>
     </div>
   </div>
@@ -94,8 +105,8 @@
   <p>T-shirt</p>
 </div>
 <div class="card-white">
-  <img src="images/app005.webp" alt="photo3">
-  <p> Short</p>
+  <img src="images/jeans.jpg" alt="photo3">
+  <p> Jeans </p>
 </div>
 </div>
 </div>
@@ -145,6 +156,13 @@
       </a>
     </li>
 </ul>
+<div class="footer-end">
+  <p> <li> Home </li>
+    <li>Features </li>
+    <li>Contact</li>
+    <li> Clothes </li>
+  </p>
+</div>
 	
 </div>
 
